chore(main): removed react-app eslint config

--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "rm-node_modules": "rimraf node_modules --glob",
     "rm-package-lock": "rimraf package-lock.json",
     "rm-yarn-lock": "rimraf yarn.lock",
+    "debug": "node --inspect",
+    "debug-brk": "node --inspect-brk",
     "clean": "yarn rm-yarn-lock && yarn rm-node_modules",
     "generate-styles": "style-dictionary build --config style-dictionary.config.js",
     "build-sass": "sass --no-source-map ./src/styles/index.scss ./static/styles/sass-generated/index.css && postcss ./static/styles/sass-generated/index.css -o ./static/styles/postcss-processed/index.css",
@@ -135,6 +137,8 @@
     "@babel/generator": "^7.25.9",
     "@babel/parser": "^7.25.9",
     "@babel/plugin-syntax-import-attributes": "^7.25.9",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
     "@babel/traverse": "^7.25.9",
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
@@ -172,7 +176,6 @@
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-config-react-app": "^7.0.1",
     "eslint-mdx": "^3.1.5",
     "eslint-plugin-css-modules": "^2.12.0",
     "eslint-plugin-import": "^2.31.0",
@@ -181,7 +184,7 @@
     "eslint-plugin-mdx": "^3.1.5",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-storybook": "^0.10.1",
     "express": "^4.21.1",
     "husky": "^9.1.6",
